force-app/main/default/objects/Validity_Manager__c/Validity_Manager__c.object-meta.xml
<CustomObject>
    <label>Validity Manager</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validity Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>