force-app/main/default/objects/Validity_Manager__c/fields/BRZ__c.field-meta.xml
<CustomField>
    <fullName>BRZ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shared with Bar ziv Ravid</description>
    <label>BRZ</label>
    <type>Checkbox</type>
</CustomField>