force-app/main/default/objects/Validity_Manager__c/fields/CarNumber__c.field-meta.xml
<CustomField>
    <fullName>CarNumber__c</fullName>
    <formula>Policy__r.Novidea_HPC__Car_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CarNumber</label>
    <type>Text</type>
</CustomField>