force-app/main/default/objects/Validity_Manager__c/fields/Client_Active_NotPersonal__c.field-meta.xml
<CustomField>
    <fullName>Client_Active_NotPersonal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Active NotPersonal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Validity Managers (Client Active NotPersonal)</relationshipLabel>
    <relationshipName>Client_Active_NotPersonal</relationshipName>
    <type>Lookup</type>
</CustomField>