force-app/main/default/objects/Validity_Manager__c/fields/Client_Active_Personal__c.field-meta.xml
<CustomField>
    <fullName>Client_Active_Personal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Active Personal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Validity Managers (Client Active Personal)</relationshipLabel>
    <relationshipName>Client_Active_Personal</relationshipName>
    <type>Lookup</type>
</CustomField>