force-app/main/default/objects/Validity_Manager__c/fields/Client_NotActive_NotPersonal__c.field-meta.xml
<CustomField>
    <fullName>Client_NotActive_NotPersonal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client NotActive NotPersonal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Validity Managers (Client NotActive NotPersonal)</relationshipLabel>
    <relationshipName>Client_NotActive_NotPersonal</relationshipName>
    <type>Lookup</type>
</CustomField>