force-app/main/default/objects/Validity_Manager__c/fields/Client_NotActive_Personal__c.field-meta.xml
<CustomField>
    <fullName>Client_NotActive_Personal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client NotActive Personal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Validity Managers (Client NotActive Personal)</relationshipLabel>
    <relationshipName>Client_NotActive_Personal</relationshipName>
    <type>Lookup</type>
</CustomField>