force-app/main/default/objects/Validity_Manager__c/fields/ExternalIDBZR__c.field-meta.xml
<CustomField>
    <fullName>ExternalIDBZR__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIDBZR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>