force-app/main/default/objects/Validity_Manager__c/fields/ExternalIDIL__c.field-meta.xml
<CustomField>
    <fullName>ExternalIDIL__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIDIL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>