force-app/main/default/objects/Validity_Manager__c/fields/FromMigration__c.field-meta.xml
<CustomField>
    <fullName>FromMigration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromMigration</label>
    <type>Checkbox</type>
</CustomField>