force-app/main/default/objects/Validity_Manager__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <formula>TEXT(Policy__r.Novidea_HPC__Insurance_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סוג הביטוח</label>
    <type>Text</type>
</CustomField>