force-app/main/default/objects/Validity_Manager__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>Validity Managers</relationshipLabel>
    <relationshipName>Validity_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>