force-app/main/default/objects/Validity_Manager__c/fields/Policy_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Policy_Carrier__c</fullName>
    <formula>Policy__r.Novidea_HPC__Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Carrier</label>
    <type>Text</type>
</CustomField>