force-app/main/default/objects/Validity_Manager__c/fields/Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Effective_Date__c</fullName>
    <formula>Policy__r.Novidea_HPC__Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>