force-app/main/default/objects/Validity_Manager__c/fields/Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiration_Date__c</fullName>
    <formula>Policy__r.Novidea_HPC__Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Expiration Date</label>
    <type>Date</type>
</CustomField>