force-app/main/default/objects/Validity_Manager__c/fields/Policy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Policy_Owner__c</fullName>
    <formula>Policy__r.Owner:User.FirstName + &quot; &quot; + Policy__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Owner</label>
    <type>Text</type>
</CustomField>