force-app/main/default/objects/Validity_Manager__c/fields/Policy_Product_Definition__c.field-meta.xml
<CustomField>
    <fullName>Policy_Product_Definition__c</fullName>
    <formula>Policy__r.Novidea_HPC__Product_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Product Definition</label>
    <type>Text</type>
</CustomField>