force-app/main/default/objects/Validity_Manager__c/fields/Premium_Amount_Currency__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount_Currency__c</fullName>
    <formula>TEXT(Policy__r.Novidea_HPC__Premium_Amount_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Amount Currency</label>
    <type>Text</type>
</CustomField>