force-app/main/default/objects/Validity_Manager__c/fields/Premium_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Premium_To_Pay__c</fullName>
    <formula>Policy__r.Novidea_HPC__Premium_to_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium To Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>