force-app/main/default/objects/Validity_Manager__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Policy__r.Novidea_HPC__Product_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם המוצר</label>
    <type>Text</type>
</CustomField>